FILE(GLOB SRC *.cpp)
FILE(GLOB MOC_HDRS *.h)
FILE(GLOB UIS *.ui)

include(${QT_USE_FILE})

QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})
QT4_WRAP_UI(UIS_H ${UIS})

ADD_EXECUTABLE(hamlog_qt ${SRC} ${MOC_SRCS} ${UIS_H})

TARGET_LINK_LIBRARIES(hamlog_qt hamlog ${QT_LIBRARIES})

INSTALL(TARGETS hamlog_qt RUNTIME DESTINATION bin)
